--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<header class="ecommerce">
-			<h1> PROYECTO ECOMMERCE</h1>
+			<h1> Golf pro shop</h1>
 
 	<div class="container">
 
@@ -20,7 +20,7 @@
 			<div class="pos-f-t">
 			  <div class="collapse" id="navbarToggleExternalContent">
 			    <div class="bg-dark p-4">
-			      <h5 class="text-white h4">PORTFOLIO</h5>
+			      <h5 class="text-white h4">Productos</h5>
 						<h5 class="text-white h4">ABOUT</h5>
 						<h5 class="text-white h4">CONTACT</h5>
 			      <span class="text-muted">ABOUT</span>
