probando otro menu izquierda

--- a/index.html
+++ b/index.html
@@ -43,14 +43,23 @@ Menu
 	</header>
 
 
-<section class="productosdestacados">
-	<div class="dropdown-menu">
-	  <span class="dropdown-item-text">Nuestros Articulos</span>
-	  <a class="dropdown-item" href="#">Drivers</a>
-	  <a class="dropdown-item" href="#">Hierros</a>
-	  <a class="dropdown-item" href="#">Bolsas</a>
-	</div>
+<section class="productos">
+	<ul class="nav flex-column">
+	  <li class="nav-item">
+	    <a class="nav-link active" href="#">Nuestros Articulos</a>
+	  </li>
+	  <li class="nav-item">
+	    <a class="nav-link" href="#">Drivers</a>
+	  </li>
+	  <li class="nav-item">
+	    <a class="nav-link" href="#">Hierros</a>
+	  </li>
+	  <li class="nav-item">
+	    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+	  </li>
+	</ul>
 </section>
+
 
 
 
