--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ Menu
 
 
 <section class="productos">
+<div class="menuproductos">
 	<ul class="nav flex-column">
 	  <li class="nav-item">
 	    <a class="nav-link active" href="#">Nuestros Articulos</a>
@@ -58,6 +59,7 @@ Menu
 	    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
 	  </li>
 	</ul>
+	</div>
 </section>
 
 
@@ -65,13 +67,16 @@ Menu
 
 
 
-<div class="row mx-auto contenedor2">
-	<img src="img/callaway_hierros.png" alt="" width="250px" class="center">
-	<img src="img/ping_hierros.png" alt="" width="250px" class="center">
-	<img src="img/taylor_m5.png" alt="" width="250px" class="center">
-	<img src="img/ping_driver.png" alt="" width="250px"class="center">
+<section class="fotos">
+	<div class="row mx-auto contenedor2">
+		<img src="img/callaway_hierros.png" alt="" width="250px" class="center">
+		<img src="img/ping_hierros.png" alt="" width="250px" class="center">
+		<img src="img/taylor_m5.png" alt="" width="250px" class="center">
+		<img src="img/ping_driver.png" alt="" width="250px"class="center">
 
-</div>
+	</div>
+</section>
+
 
 
 
