--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			    <div class="bg-dark p-4">
 						<a href="#productos"><h5 class="text-white h4">Productos</h5></a>
 						<a href="facs.html"><h5 class="text-white h4">F.A.Q. Preguntas frecuentes</h5></a>
-						<a href="regstro.html"><h5 class="text-white h4">Formulario de Registro</h5></a>
+						<a href="registro.html"><h5 class="text-white h4">Formulario de Registro</h5></a>
 						<a href="login.html"><h5 class="text-white h4">Formulario de Login</h5></a>
 						<a href="contacto.php"><h5 class="text-white h4">Contacto</h5></a>
 						<a href="perfil.php"><h5 class="text-white h4">Pérfil del Usuario</h5></a>
