ESPERO Q AHORA SI PUEDA SUBIR LOS CAMBIOS!!!!!!
HTML Y CSS CAMBIE

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			    <div class="bg-dark p-4">
 						<a href="#productos"><h5 class="text-white h4">Productos</h5></a>
 						<a href="facs.html"><h5 class="text-white h4">F.A.Q. Preguntas frecuentes</h5></a>
-						<a href="registro.html"><h5 class="text-white h4">Formulario de Registro</h5></a>
+						<a href="regstro.html"><h5 class="text-white h4">Formulario de Registro</h5></a>
 						<a href="login.html"><h5 class="text-white h4">Formulario de Login</h5></a>
 						<a href="contacto.php"><h5 class="text-white h4">Contacto</h5></a>
 						<a href="perfil.php"><h5 class="text-white h4">Pérfil del Usuario</h5></a>
@@ -38,13 +38,13 @@ Menu
 			    </button>
 			  </nav>
 			</div>
+					<div class ="banner">
 </div>
 
 	</header>
 
 
 <section class="productos">
-<div class="menuproductos">
 	<ul class="nav flex-column">
 	  <li class="nav-item">
 	    <a class="nav-link active" href="#">Nuestros Articulos</a>
@@ -59,25 +59,42 @@ Menu
 	    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
 	  </li>
 	</ul>
-	</div>
 </section>
 
-
-
-
-
-
-<section class="fotos">
-	<div class="row mx-auto contenedor2">
-		<img src="img/callaway_hierros.png" alt="" width="250px" class="center">
-		<img src="img/ping_hierros.png" alt="" width="250px" class="center">
-		<img src="img/taylor_m5.png" alt="" width="250px" class="center">
-		<img src="img/ping_driver.png" alt="" width="250px"class="center">
-
+<!--<div class="row mx-auto contenedor2">
+	<img src="img/callaway_hierros.png" alt="" width="250px" class="center">
+	<img src="img/ping_hierros.png" alt="" width="250px" class="center">
+	<img src="img/taylor_m5.png" alt="" width="250px" class="center">
+	<img src="img/ping_driver.png" alt="" width="250px"class="center">
+</div>-->
+<!--/==========================PRIMERA CARTA===============================-->
+<div class="card" style="width: 18rem;">
+  <img src="img/callaway_hierros.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">HIERRO CALLAWAY</h5>
+    <p class="card-text">POR FAVOR BREVE DESCRIPCION AQUI ANTO</p>
+    <a href="#" class="btn btn-primary">COMPRAR</a>
+  </div>
+<!--/==========================SEGUNDA CARTA===============================-->
+	<div class="card" style="width: 18rem;">
+	  <img src="img/taylor_m5.jpg" class="card-img-top" alt="...">
+	  <div class="card-body">
+	    <h5 class="card-title">TAYLOR M 5</h5>
+	    <p class="card-text">POR FAVOR BREVE DESCRIPCION AQUI ANTO</p>
+	    <a href="#" class="btn btn-primary">COMPRAR</a>
+	  </div>
+</div>
+<!--/==========================TERCERA CARTA===============================-->
+	<div class="card" style="width: 18rem;">
+	<img src="img/ping_driver.jpg" class="card-img-top" alt="...">
+	<div class="card-body">
+		<h5 class="card-title">PING DRIVER</h5>
+		<p class="card-text">POR FAVOR BREVE DESCRIPCION AQUI ANTO</p>
+		<a href="#" class="btn btn-primary">COMPRAR</a>
 	</div>
-</section>
-
-
+<!--/==========================CUARTA CARTA===============================-->
+</div>
+</div>
 
 
 
