agregue descripcion y logo

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 <div class="card" style="width: 18rem;">
   <img src="img/callaway_hierros.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">HIERRO CALLAWAY</h5>
-    <p class="card-text">POR FAVOR BREVE DESCRIPCION AQUI ANTO</p>
+    <h5 class="card-title">HIERROS CALLAWAY</h5>
+    <p class="card-text">Consulte por modelos y varas</p>
     <a href="#" class="btn btn-success">COMPRAR</a>
   </div>
 </div>
@@ -91,8 +91,8 @@
 	<div class="card" style="width: 18rem;">
 	  <img src="img/taylor_m5.jpg" class="card-img-top" alt="...">
 	  <div class="card-body">
-	    <h5 class="card-title">TAYLOR M 5</h5>
-	    <p class="card-text">POR FAVOR BREVE DESCRIPCION AQUI ANTO</p>
+	    <h5 class="card-title">DRIVER TAYLOR M5</h5>
+	    <p class="card-text">Tenemos la vara para usted</p>
 	    <a href="#" class="btn btn-success">COMPRAR</a>
 	  </div>
 </div>
@@ -101,7 +101,7 @@
 	<img src="img/ping_driver.jpg" class="card-img-top" alt="...">
 	<div class="card-body">
 		<h5 class="card-title">PING DRIVER</h5>
-		<p class="card-text">POR FAVOR BREVE DESCRIPCION AQUI ANTO</p>
+		<p class="card-text">Ultimo modelo!</p>
 		<a href="#" class="btn btn-success">COMPRAR</a>
 	</div>
 </div>
