--- a/academia.html
+++ b/academia.html
@@ -6,38 +6,42 @@
 				<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 				<link rel="stylesheet" href="css/style.css">
 
-		<title>The Golf Shop</title>
+		<title>Golf Shop</title>
 		<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat&display=swap" rel="stylesheet">
 	</head>
 	<body>
-		<header class="golfshop">
+		<header class="academia">
 			<img src="img/shopgolf.png" alt="logotipo" class="logo">
+
+	<div class="container">
+
+		<!-- boton buscar -->
 
 
 <h1 id="Titulo">
-  LOG IN
+  Academia de Golf
 </h1>
 	</header>
 
 
+<div class="fotos" style="">
+  <h3></h3>
+  <br>
+<img src="img/acad1.jpg" class="img-fluid" alt="Responsive image">
+
+<img src="img/acad2.jpg" class="rounded mx-auto d-block" alt="...">
+<img src="img/acad3.jpg" alt="..." class="img-thumbnail">
+</div>
 
 
-	<form>
-	  <div class="form-group">
-	    <label for="exampleInputEmail1">Email</label>
-	    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-	    <small id="emailHelp" class="form-text text-muted">No compartiremos su email con nadie</small>
-	  </div>
-	  <div class="form-group">
-	    <label for="exampleInputPassword1">Clave</label>
-	    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-	  </div>
-	  <div class="form-group form-check">
-	    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-	    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-	  </div>
-	  <button type="submit" class="btn btn-primary">Submit</button>
-	</form>
+
+
+<div class="subtitulo" style="">
+  <h3></h3>
+  <br>
+</div>
+
+
 
 
 <footer>
