--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 				<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+				<script src="https://kit.fontawesome.com/0cb2d9cf91.js"></script>
 				<link rel="stylesheet" href="css/style.css">
 
 		<title>The Golf Shop</title>
@@ -45,7 +46,7 @@
 			</div>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+			<!--<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
 		</li>
 	</ul>
 	<form class="form-inline my-2 my-lg-0">
@@ -53,6 +54,7 @@
 		<button class="btn btn-outline-success gr-22 gr-sm-22" type="submit">Buscar</button>
 	</form>
 </div>
+<a href="carrito.html" class="volver"><i class="fas fa-2x fa-shopping-cart" style="color:#18EB8E ";></i></a>
 </nav>
 
 <h1 id="Titulo">
@@ -61,73 +63,46 @@
 
 	</header>
 
-
-<!--<section class="productos">
-	<ul class="nav flex-column">
-	  <li class="nav-item">
-	    <a class="nav-link active" href="#">Nuestros Articulos</a>
-	  </li>
-	  <li class="nav-item">
-	    <a class="nav-link" href="#">Drivers</a>
-	  </li>
-	  <li class="nav-item">
-	    <a class="nav-link" href="#">Hierros</a>
-	  </li>
-	  <li class="nav-item">
-	    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-	  </li>
-	</ul>
-</section>-->
-
-<!--<div class="row mx-auto contenedor2">
-	<img src="img/callaway_hierros.png" alt="" width="250px" class="center">
-	<img src="img/ping_hierros.png" alt="" width="250px" class="center">
-	<img src="img/taylor_m5.png" alt="" width="250px" class="center">
-	<img src="img/ping_driver.png" alt="" width="250px"class="center">
-</div>-->
 <!--/==========================PRIMERA CARTA===============================-->
-<div class="card" style="width: 18rem;">
-  <img src="img/driverepic.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">CALLAWAY EPIC</h5>
-    <p class="card-text">Consulte por modelos y varas</p>
-    <a href="#" class="btn btn-success">COMPRAR</a>
-  </div>
-</div>
-<!--/==========================SEGUNDA CARTA===============================-->
 	<div class="card" style="width: 18rem;">
-	  <img src="img/drivers.jpg" class="card-img-top" alt="...">
+	  <img src="img/driverepic.jpg" class="card-img-top" alt="...">
 	  <div class="card-body">
-	    <h5 class="card-title">DRIVERS CALLAWAY</h5>
-	    <p class="card-text">Tenemos la vara para usted</p>
+	    <h5 class="card-title">CALLAWAY EPIC</h5>
+	    <p class="card-text">Consulte por modelos y varas</p>
 	    <a href="#" class="btn btn-success">COMPRAR</a>
 	  </div>
-</div>
-
-<!--/==========================SEGUNDA CARTA===============================-->
-	<div class="card" style="width: 18rem;">
-	  <img src="img/driverxr.jpg" class="card-img-top" alt="...">
-	  <div class="card-body">
-	    <h5 class="card-title">CALLAWAY XR</h5>
-	    <p class="card-text">Tenemos la vara para usted</p>
-	    <a href="#" class="btn btn-success">COMPRAR</a>
-	  </div>
-</div>
-
-
-<!--/==========================TERCERA CARTA===============================-->
-	<div class="card" style="width: 18rem;">
-	<img src="img/ping_driver.jpg" class="card-img-top" alt="...">
-	<div class="card-body">
-		<h5 class="card-title">PING DRIVER</h5>
-		<p class="card-text">Ultimo modelo!</p>
-		<a href="#" class="btn btn-success">COMPRAR</a>
 	</div>
-</div>
+<!--/==========================SEGUNDA CARTA===============================-->
+			<div class="card" style="width: 18rem;">
+			 	<img src="img/drivers.jpg" class="card-img-top" alt="...">
+			  <div class="card-body">
+			    <h5 class="card-title">DRIVERS CALLAWAY</h5>
+			    <p class="card-text">Tenemos la vara para usted</p>
+			    <a href="#" class="btn btn-success">COMPRAR</a>
+			  </div>
+		</div>
+<!--/==========================SEGUNDA CARTA===============================-->
+					<div class="card" style="width: 18rem;">
+					  	<img src="img/driverxr.jpg" class="card-img-top" alt="...">
+					  <div class="card-body">
+					    <h5 class="card-title">CALLAWAY XR</h5>
+					    <p class="card-text">Tenemos la vara para usted</p>
+					    <a href="#" class="btn btn-success">COMPRAR</a>
+					  </div>
+				</div>
+<!--/==========================TERCERA CARTA===============================-->
+						<div class="card" style="width: 18rem;">
+						<img src="img/ping_driver.jpg" class="card-img-top" alt="...">
+						<div class="card-body">
+							<h5 class="card-title">PING DRIVER</h5>
+							<p class="card-text">Ultimo modelo!</p>
+							<a href="#" class="btn btn-success">COMPRAR</a>
+						</div>
+					</div>
 <!--/==========================CUARTA CARTA===============================-->
 <!--/==========================TERCERA CARTA===============================-->
 	<div class="card" style="width: 18rem;">
-	<img src="img/driverpingg400.jpg" class="card-img-top" alt="...">
+		<img src="img/driverpingg400.jpg" class="card-img-top" alt="...">
 	<div class="card-body">
 		<h5 class="card-title">PING G400</h5>
 		<p class="card-text">Ultimo modelo!</p>
@@ -136,7 +111,7 @@
 </div>
 <!--/==========================SEGUNDA CARTA===============================-->
 	<div class="card" style="width: 18rem;">
-	  <img src="img/driverm3m4.jpg" class="card-img-top" alt="...">
+	  	<img src="img/driverm3m4.jpg" class="card-img-top" alt="...">
 	  <div class="card-body">
 	    <h5 class="card-title">TAYLOR MADE M3 y M4</h5>
 	    <p class="card-text">Tenemos la vara para usted</p>
@@ -146,7 +121,7 @@
 
 
 <footer>
-	<img src="/Applications/MAMP/htdocs/PROYECTOS/ecommerce/img/LOGO ACADEMIA.jpg" alt="" class="academia">
+		<img src="/Applications/MAMP/htdocs/PROYECTOS/ecommerce/img/LOGO ACADEMIA.jpg" alt="" class="academia">
 	<style>a {text-decoration: none;} </style>
 		<ul class="sinvineta1">
 			<li><a href="Contacto.html" style="color:#CFCBCB;">Home</a></li>
