active boton volver

--- a/academia.html
+++ b/academia.html
@@ -11,25 +11,24 @@
 	</head>
 	<body>
 		<header class="academia">
-			<img src="img/shopgolf.png" alt="logotipo" class="logo">
-
+<a href="index.html" class="volver"><img src="img/shopgolf.png" alt=""></a>
 	<div class="container">
 
 		<!-- boton buscar -->
 
-
-<h1 id="Titulo">
-  Academia de Golf
+<img src="./img/academia_anto.png" alt="" class="fotoacad">
+<h1  id="academia">
+  Clases de Golf
 </h1>
+<h3 class="academia">Todas las edades y niveles</h3>
 	</header>
 
-
+<section>
 <div class="fotos" style="">
   <h3></h3>
   <br>
 <img src="img/acad1.jpg" class="img-fluid" alt="Responsive image">
-
-<img src="img/acad2.jpg" class="rounded mx-auto d-block" alt="...">
+<img src="img/acad2.jpg" alt="..." class="img-thumbnail">
 <img src="img/acad3.jpg" alt="..." class="img-thumbnail">
 </div>
 
@@ -41,7 +40,7 @@
   <br>
 </div>
 
-
+</section>
 
 
 <footer>
