--- a/login.html
+++ b/login.html
@@ -11,8 +11,7 @@
 	</head>
 	<body>
 		<header class="golfshop">
-			<img src="img/shopgolf.png" alt="logotipo" class="logo">
-
+<a href="index.html" class="volver"><img src="img/shopgolf.png" alt=""></a>
 
 <h1 id="Titulo">
   LOG IN
