--- a/putter.html
+++ b/putter.html
@@ -11,8 +11,7 @@
 	</head>
 	<body>
 		<header class="golfshop">
-			<img src="img/shopgolf.png" alt="logotipo" class="logo">
-
+<a href="index.html" class="volver"><img src="img/shopgolf.png" alt=""></a>
 	<div class="container">
 
 		<!-- boton buscar -->
