separe hojas de estilo

--- a/academia.html
+++ b/academia.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 				<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-				<link rel="stylesheet" href="css/style.css">
+				<link rel="stylesheet" href="css/styleacad.css">
 
 		<title>Golf Shop</title>
 		<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat&display=swap" rel="stylesheet">
@@ -30,6 +30,15 @@
 <img src="img/acad1.jpg" class="img-fluid" alt="Responsive image">
 <img src="img/acad2.jpg" alt="..." class="img-thumbnail">
 <img src="img/acad3.jpg" alt="..." class="img-thumbnail">
+<img src="img/acad4.jpg" alt="..." class="img-thumbnail">
+<img src="img/acad5.jpg" alt="..." class="img-thumbnail">
+<img src="img/acad6.jpg" alt="..." class="img-thumbnail">
+<img src="img/acad7.jpg" alt="..." class="img-thumbnail">
+<img src="img/acad8.jpg" alt="..." class="img-thumbnail">
+<video src="https://www.facebook.com/304821913452701/posts/317836152151277/"></video>
+
+
+
 </div>
 
 
@@ -49,9 +58,9 @@
 		<ul class="sinvineta1">
 			<li><a href="Contacto.html" style="color:#CFCBCB;">Home</a></li>
 			<br>
-			<li><a href="www.facebook.com" style="color:#CFCBCB;">Preguntas Frecuentes</a></li>
-			<li><a href="www.twitter.com" style="color:#CFCBCB;">Formulario de Registro</a></li>
-			<li><a href="www.instagram.com" style="color:#CFCBCB;">Contacto</a></li>
+			<li><a href="preguntas.html" style="color:#CFCBCB;">Preguntas Frecuentes</a></li>
+			<li><a href="formulario.html" style="color:#CFCBCB;">Formulario de Registro</a></li>
+			<li><a href="contacto.html" style="color:#CFCBCB;">Contacto</a></li>
 		</ul>
 </footer>
 
