--- a/formulario.html
+++ b/formulario.html
@@ -86,11 +86,10 @@
 	<img src="/Applications/MAMP/htdocs/PROYECTOS/ecommerce/img/LOGO ACADEMIA.jpg" alt="" class="academia">
 	<style>a {text-decoration: none;} </style>
 		<ul class="sinvineta1">
-			<li><a href="Contacto.html" style="color:#CFCBCB;">Home</a></li>
+			<li><a href="index.html" style="color:#CFCBCB;">Home</a></li>
 			<br>
-			<li><a href="www.facebook.com" style="color:#CFCBCB;">Preguntas Frecuentes</a></li>
-			<li><a href="www.twitter.com" style="color:#CFCBCB;">Formulario de Registro</a></li>
-			<li><a href="www.instagram.com" style="color:#CFCBCB;">Contacto</a></li>
+			<li><a href="preguntas.com" style="color:#CFCBCB;">Preguntas Frecuentes</a></li>
+			<li><a href="contacto.html" style="color:#CFCBCB;">Contacto</a></li>
 		</ul>
 </footer>
 
