--- a/preguntas.html
+++ b/preguntas.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 				<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-				<link rel="stylesheet" href="css/style.css">
+				<link rel="stylesheet" href="css/stylepreg.css">
 
 		<title>The Golf Shop</title>
 		<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat&display=swap" rel="stylesheet">
@@ -17,11 +17,32 @@
   PREGUNTAS FRECUENTES
 </h1>
 	</header>
+<body>
 
 
+	<!-- FAQ -->
+	<div class="parent-container">
+	  <ul class="faq">
+	    <li>
+	      <h3 class="question">Frequently Asked Question?
+	        <div class="plus-minus-toggle collapsed"></div>
+	      </h3>
+	      <div class="answer">Answer. Donec vitae tellus risus. Aenean sed fermentum risus. Phasellus venenatis
+	        ultricies dignissim. Nunc ante lectus, accumsan non porta at. Donec vitae tellus risus. Aenean sed
+	        fermentum risus. Phasellus venenatis ultricies dignissim.</div>
+	    </li>
+	    <li>
+	      <h3 class="question">Frequently Asked Question?
+	        <div class="plus-minus-toggle collapsed"></div>
+	      </h3>
+	      <div class="answer">Answer. Donec vitae tellus risus. Aenean sed fermentum risus. Phasellus venenatis
+	        ultricies dignissim. Nunc ante lectus, accumsan non porta at. Donec vitae tellus risus. Aenean sed
+	        fermentum risus. Phasellus venenatis ultricies dignissim.</div>
+	    </li>
+	  </ul>
+	</div>
 
-
-
+</body>
 
 
 <footer>
@@ -30,8 +51,7 @@
 		<ul class="sinvineta1">
 			<li><a href="index.html" style="color:#CFCBCB;">Home</a></li>
 			<br>
-			<li><a href="preww.facebook.com" style="color:#CFCBCB;">Preguntas Frecuentes</a></li>
-			<li><a href="www.twitter.com" style="color:#CFCBCB;">Formulario de Registro</a></li>
+			<li><a href="formulario.html" style="color:#CFCBCB;">Formulario de registro</a></li>
 			<li><a href="contacto.html" style="color:#CFCBCB;">Contacto</a></li>
 		</ul>
 </footer>
