--- a/preguntas.html
+++ b/preguntas.html
@@ -24,20 +24,24 @@
 	<div class="parent-container">
 	  <ul class="faq">
 	    <li>
-	      <h3 class="question">Frequently Asked Question?
+	      <h3 class="question">Registro de los Clientes
 	        <div class="plus-minus-toggle collapsed"></div>
 	      </h3>
-	      <div class="answer">Answer. Donec vitae tellus risus. Aenean sed fermentum risus. Phasellus venenatis
-	        ultricies dignissim. Nunc ante lectus, accumsan non porta at. Donec vitae tellus risus. Aenean sed
-	        fermentum risus. Phasellus venenatis ultricies dignissim.</div>
+	      <div class="answer"><b>Por que debo registrarme en la tienda?</b>
+					El registro de los clientes permite a The Golf Shop acceder a la informacion necesaria para gestionar los pedidos.
+<br>
+<b>Como puedo resgistrarme en la Tienda?</b>
+Es facil, debe ir al pie de la pagina e ingresar en Formulario de Registro.
+				</div>
 	    </li>
 	    <li>
-	      <h3 class="question">Frequently Asked Question?
+	      <h3 class="question">Informacion sobre productos y stock
 	        <div class="plus-minus-toggle collapsed"></div>
 	      </h3>
-	      <div class="answer">Answer. Donec vitae tellus risus. Aenean sed fermentum risus. Phasellus venenatis
-	        ultricies dignissim. Nunc ante lectus, accumsan non porta at. Donec vitae tellus risus. Aenean sed
-	        fermentum risus. Phasellus venenatis ultricies dignissim.</div>
+	      <div class="answer"><b>Donde puedo encontrar mayor informacion de los productos?</b>
+					Para mayor informacion visite la pagina del fabricante. <br>
+					<b>Que hago para saber si un producto esta disponible?</b>
+						Una vez que seleccione el producto que desea comprar, se indicara Esta disponible!</div>
 	    </li>
 	  </ul>
 	</div>
