Modifico HOME con nuevo estilo de cartas, y normalizo las imagenes

--- a/index.html
+++ b/index.html
@@ -3,122 +3,118 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-				<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-				<script src="https://kit.fontawesome.com/0cb2d9cf91.js"></script>
-				<link rel="stylesheet" href="css/style.css">
-
-		<title>The Golf Shop</title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<script src="https://kit.fontawesome.com/0cb2d9cf91.js"></script>
+		<link rel="stylesheet" href="css/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat&display=swap" rel="stylesheet">
+		<title>The Golf Shop</title>
 	</head>
+
 	<body>
 		<header class="golfshop">
 			<img src="img/shopgolf.png" alt="logotipo" class="logo">
 
-	<div class="container">
-
+			<div class="container">
 		<!-- cabecera -->
-
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-<a class="navbar-brand" href="#">The Golf Shop</a>
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	<span class="navbar-toggler-icon"></span>
-</button>
+				<a class="navbar-brand" href="#">The Golf Shop</a>
+						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-	<ul class="navbar-nav mr-auto">
-		<li class="nav-item active">
-			<a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="academia.html">Nuestra Escuela</a>
-		</li>
-		<li class="nav-item dropdown">
-			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				Nuestros Articulos
-			</a>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item active">
+							<a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="academia.html">Nuestra Escuela</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Nuestros Articulos
+							</a>
+									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+										<a class="dropdown-item" href="#drivers">Drivers</a>
+										<a class="dropdown-item" href="hierros.html">Hierros</a>
+										<a class="dropdown-item" href="putter.html">Putters</a>
+										<div class="dropdown-divider"></div>
+										<a class="dropdown-item" href="accesorios.html">Accesorios</a>
+									</div>
+										</li>
+											<li class="nav-item">
+												<!--<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
+											</li>
+					</ul>
 
-			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-				<a class="dropdown-item" href="#drivers">Drivers</a>
-				<a class="dropdown-item" href="hierros.html">Hierros</a>
-				<a class="dropdown-item" href="putter.html">Putters</a>
-				<div class="dropdown-divider"></div>
-				<a class="dropdown-item" href="accesorios.html">Accesorios</a>
-			</div>
-		</li>
-		<li class="nav-item">
-			<!--<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
-		</li>
-	</ul>
-	<form class="form-inline my-2 my-lg-0">
-		<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
-		<button class="btn btn-outline-success gr-22 gr-sm-22" type="submit">Buscar</button>
-	</form>
-</div>
-<a href="carrito.html" class="volver"><i class="fas fa-2x fa-shopping-cart" style="color:#18EB8E ";></i></a>
-</nav>
+												<form class="form-inline my-2 my-lg-0">
+													<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
+													<button class="btn btn-outline-success gr-22 gr-sm-22" type="submit">Buscar</button>
+												</form>
+											</div>
+														<a href="carrito.html" class="volver"><i class="fas fa-2x fa-shopping-cart" style="color:#18EB8E ";></i></a>
+																</nav>
+														<h1 id="Titulo">
+														  DRIVERS
+														</h1>
 
-<h1 id="Titulo">
-  DRIVERS
-</h1>
-
-	</header>
-
-<!--/==========================PRIMERA CARTA===============================-->
-	<div class="card" style="width: 18rem;">
-	  <img src="img/driverepic.jpg" class="card-img-top" alt="...">
-	  <div class="card-body">
-	    <h5 class="card-title">CALLAWAY EPIC</h5>
-	    <p class="card-text">Consulte por modelos y varas</p>
-	    <a href="#" class="btn btn-success">COMPRAR</a>
-	  </div>
-	</div>
-<!--/==========================SEGUNDA CARTA===============================-->
-			<div class="card" style="width: 18rem;">
-			 	<img src="img/drivers.jpg" class="card-img-top" alt="...">
-			  <div class="card-body">
-			    <h5 class="card-title">DRIVERS CALLAWAY</h5>
-			    <p class="card-text">Tenemos la vara para usted</p>
-			    <a href="#" class="btn btn-success">COMPRAR</a>
-			  </div>
-		</div>
-<!--/==========================SEGUNDA CARTA===============================-->
-					<div class="card" style="width: 18rem;">
-					  	<img src="img/driverxr.jpg" class="card-img-top" alt="...">
-					  <div class="card-body">
-					    <h5 class="card-title">CALLAWAY XR</h5>
-					    <p class="card-text">Tenemos la vara para usted</p>
-					    <a href="#" class="btn btn-success">COMPRAR</a>
-					  </div>
-				</div>
-<!--/==========================TERCERA CARTA===============================-->
-						<div class="card" style="width: 18rem;">
-						<img src="img/ping_driver.jpg" class="card-img-top" alt="...">
-						<div class="card-body">
-							<h5 class="card-title">PING DRIVER</h5>
-							<p class="card-text">Ultimo modelo!</p>
-							<a href="#" class="btn btn-success">COMPRAR</a>
+			</header>
+			<main>
+	<!--===================ARTICULOS EN CARTAS==========================================-->
+							<div class="card-deck" style="width:70%">
+								<div class="card" style="width: 18rem;">
+									<img src="img/driverepic_resultado.jpg" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">CALLAWAY EPIC</h5>
+									<p class="card-text">Consulte por modelos y varas</p>
+									<a href="#" class="btn btn-success">COMPRAR</a>
+								</div>
+							</div>
+							<div class="card" style="width: 18rem;">
+								<img src="img/drivers_resultado.jpg" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">DRIVERS CALLAWAY</h5>
+									<p class="card-text">Tenemos la vara para usted</p>
+									<a href="#" class="btn btn-success">COMPRAR</a>
+								</div>
+							</div>
+							<div class="card" style="width: 18rem;">
+								<img src="img/driverxr_resultado.jpg" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">CALLAWAY XR</h5>
+									<p class="card-text">Tenemos la vara para usted</p>
+									<a href="#" class="btn btn-success">COMPRAR</a>
+								</div>
+							</div>
 						</div>
-					</div>
-<!--/==========================CUARTA CARTA===============================-->
-<!--/==========================TERCERA CARTA===============================-->
-	<div class="card" style="width: 18rem;">
-		<img src="img/driverpingg400.jpg" class="card-img-top" alt="...">
-	<div class="card-body">
-		<h5 class="card-title">PING G400</h5>
-		<p class="card-text">Ultimo modelo!</p>
-		<a href="#" class="btn btn-success">COMPRAR</a>
-	</div>
-</div>
-<!--/==========================SEGUNDA CARTA===============================-->
-	<div class="card" style="width: 18rem;">
-	  	<img src="img/driverm3m4.jpg" class="card-img-top" alt="...">
-	  <div class="card-body">
-	    <h5 class="card-title">TAYLOR MADE M3 y M4</h5>
-	    <p class="card-text">Tenemos la vara para usted</p>
-	    <a href="#" class="btn btn-success">COMPRAR</a>
-	  </div>
-</div>
-
+<!--===================ARTICULOS EN CARTAS==========================================-->
+						<div class="card-deck" style="width:70%">
+							<div class="card" style="width: 18rem;">
+								<img src="img/ping_hierros_resultado.jpg" class="card-img-top" alt="...">
+							<div class="card-body">
+								<h5 class="card-title">PING DRIVER</h5>
+									<p class="card-text">Ultimo Modelo!</p>
+										<a href="#" class="btn btn-success">COMPRAR</a>
+									</div>
+							</div>
+								<div class="card" style="width: 18rem;">
+									<img src="img/driverpingg400_resultado.jpg" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">PING G400</h5>
+										<p class="card-text">Ultimo Modelo</p>
+											<a href="#" class="btn btn-success">COMPRAR</a>
+										</div>
+								</div>
+							<div class="card" style="width: 18rem;">
+								<img src="img/driverm3m4_resultado.jpg" class="card-img-top" alt="...">
+									<div class="card-body">
+											<h5 class="card-title">TAYLOR MADE M3 Y M4</h5>
+										<p class="card-text">Tenemos la vara para usted</p>
+									<a href="#" class="btn btn-success">COMPRAR</a>
+								</div>
+							</div>
+						</div>
+				</main>
 
 <footer>
 		<img src="/Applications/MAMP/htdocs/PROYECTOS/ecommerce/img/LOGO ACADEMIA.jpg" alt="" class="academia">
