subo contacto y footers con enlaces

--- a/formulario.html
+++ b/formulario.html
@@ -88,7 +88,7 @@
 		<ul class="sinvineta1">
 			<li><a href="index.html" style="color:#CFCBCB;">Home</a></li>
 			<br>
-			<li><a href="preguntas.com" style="color:#CFCBCB;">Preguntas Frecuentes</a></li>
+			<li><a href="preguntas.html" style="color:#CFCBCB;">Preguntas Frecuentes</a></li>
 			<li><a href="contacto.html" style="color:#CFCBCB;">Contacto</a></li>
 		</ul>
 </footer>
