--- a/hierros.html
+++ b/hierros.html
@@ -12,7 +12,7 @@
 	<body>
 		<header class="golfshop">
 			<a href="index.html" class="volver"><img src="img/shopgolf.png" alt=""></a>
-			
+
 	<div class="container">
 
 
@@ -39,7 +39,7 @@
   <img src="img/callaway_hierros.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">HIERROS CALLAWAY</h5>
-    <p class="card-text">Consulte por modelos y varas</p>
+    <p class="card-text">Big Bertha y XR 2019</p>
     <a href="#" class="btn btn-success">COMPRAR</a>
   </div>
 </div>
@@ -48,8 +48,8 @@
 <div class="card" style="width: 18rem;">
   <img src="img/hierrosepic.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">CALLAWAY XR</h5>
-    <p class="card-text">Consulte por modelos y varas</p>
+    <h5 class="card-title">CALLAWAY EPIC</h5>
+    <p class="card-text">Los mas faciles</p>
     <a href="#" class="btn btn-success">COMPRAR</a>
   </div>
 </div>
@@ -59,7 +59,7 @@
   <img src="img/hierrosapex.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">CALLAWAY APEX</h5>
-    <p class="card-text">Consulte por modelos y varas</p>
+    <p class="card-text">Para manejar la pelota</p>
     <a href="#" class="btn btn-success">COMPRAR</a>
   </div>
 </div>
@@ -69,7 +69,7 @@
 	  <img src="img/hierrom5.jpg" class="card-img-top" alt="...">
 	  <div class="card-body">
 	    <h5 class="card-title">TAYLOR MADE M5</h5>
-	    <p class="card-text">Tenemos la vara para usted</p>
+	    <p class="card-text">Modelo 2019</p>
 	    <a href="#" class="btn btn-success">COMPRAR</a>
 	  </div>
 </div>
@@ -78,7 +78,7 @@
 	<img src="img/hierrosm6.jpg" class="card-img-top" alt="...">
 	<div class="card-body">
 		<h5 class="card-title">TAYLOR MADE M6</h5>
-		<p class="card-text">Ultimo modelo!</p>
+		<p class="card-text">Los mas faciles de Taylor</p>
 		<a href="#" class="btn btn-success">COMPRAR</a>
 	</div>
 </div>
@@ -88,7 +88,7 @@
   <img src="img/hierrospingg.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Ping G</h5>
-    <p class="card-text">Consulte por modelos y varas</p>
+    <p class="card-text">Vara de acero y grafito</p>
     <a href="#" class="btn btn-success">COMPRAR</a>
   </div>
 </div>
@@ -99,7 +99,7 @@
   <img src="img/hierros ping.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Ping G400</h5>
-    <p class="card-text">Consulte por modelos y varas</p>
+    <p class="card-text">Fitting incluido</p>
     <a href="#" class="btn btn-success">COMPRAR</a>
   </div>
 </div>
@@ -111,11 +111,11 @@
 	<img src="/Applications/MAMP/htdocs/PROYECTOS/ecommerce/img/LOGO ACADEMIA.jpg" alt="" class="academia">
 	<style>a {text-decoration: none;} </style>
 		<ul class="sinvineta1">
-			<li><a href="Contacto.html" style="color:#CFCBCB;">Home</a></li>
+			<li><a href="index.html" style="color:#CFCBCB;">Home</a></li>
 			<br>
-			<li><a href="www.facebook.com" style="color:#CFCBCB;">Preguntas Frecuentes</a></li>
-			<li><a href="www.twitter.com" style="color:#CFCBCB;">Formulario de Registro</a></li>
-			<li><a href="www.instagram.com" style="color:#CFCBCB;">Contacto</a></li>
+			<li><a href="preguntas.html" style="color:#CFCBCB;">Preguntas Frecuentes</a></li>
+			<li><a href="formulario.html" style="color:#CFCBCB;">Formulario de Registro</a></li>
+			<li><a href="contacto.html" style="color:#CFCBCB;">Contacto</a></li>
 		</ul>
 </footer>
 
