--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									<img src="img/driverepic_resultado.jpg" class="card-img-top" alt="...">
 								<div class="card-body">
 									<h5 class="card-title">CALLAWAY EPIC</h5>
-									<p class="card-text">Consulte por modelos y varas</p>
+									<p class="card-text">Modelo 2019</p>
 									<a href="#" class="btn btn-success">COMPRAR</a>
 								</div>
 							</div>
@@ -74,7 +74,7 @@
 								<img src="img/drivers_resultado.jpg" class="card-img-top" alt="...">
 								<div class="card-body">
 									<h5 class="card-title">DRIVERS CALLAWAY</h5>
-									<p class="card-text">Tenemos la vara para usted</p>
+									<p class="card-text">Contamos con la vara que necesita</p>
 									<a href="#" class="btn btn-success">COMPRAR</a>
 								</div>
 							</div>
@@ -82,7 +82,7 @@
 								<img src="img/driverxr_resultado.jpg" class="card-img-top" alt="...">
 								<div class="card-body">
 									<h5 class="card-title">CALLAWAY XR</h5>
-									<p class="card-text">Tenemos la vara para usted</p>
+									<p class="card-text">Hot List 2019</p>
 									<a href="#" class="btn btn-success">COMPRAR</a>
 								</div>
 							</div>
@@ -93,7 +93,7 @@
 								<img src="img/ping_hierros_resultado.jpg" class="card-img-top" alt="...">
 							<div class="card-body">
 								<h5 class="card-title">PING DRIVER</h5>
-									<p class="card-text">Ultimo Modelo!</p>
+									<p class="card-text">G410 el nuevo driver de PING</p>
 										<a href="#" class="btn btn-success">COMPRAR</a>
 									</div>
 							</div>
@@ -101,15 +101,15 @@
 									<img src="img/driverpingg400_resultado.jpg" class="card-img-top" alt="...">
 								<div class="card-body">
 									<h5 class="card-title">PING G400</h5>
-										<p class="card-text">Ultimo Modelo</p>
+										<p class="card-text">Facil</p>
 											<a href="#" class="btn btn-success">COMPRAR</a>
 										</div>
 								</div>
 							<div class="card" style="width: 18rem;">
 								<img src="img/driverm3m4_resultado.jpg" class="card-img-top" alt="...">
 									<div class="card-body">
-											<h5 class="card-title">TAYLOR MADE M3 Y M4</h5>
-										<p class="card-text">Tenemos la vara para usted</p>
+											<h5 class="card-title">TAYLOR MADE M3 y M4</h5>
+										<p class="card-text">Distintos lofts y varas</p>
 									<a href="#" class="btn btn-success">COMPRAR</a>
 								</div>
 							</div>
@@ -120,11 +120,11 @@
 		<img src="/Applications/MAMP/htdocs/PROYECTOS/ecommerce/img/LOGO ACADEMIA.jpg" alt="" class="academia">
 	<style>a {text-decoration: none;} </style>
 		<ul class="sinvineta1">
-			<li><a href="Contacto.html" style="color:#CFCBCB;">Home</a></li>
+			<li><a href="index.html" style="color:#CFCBCB;">Home</a></li>
 			<br>
 			<li><a href="preguntas.html" style="color:#CFCBCB;">Preguntas Frecuentes</a></li>
 			<li><a href="formulario.html" style="color:#CFCBCB;">Formulario de Registro</a></li>
-			<li><a href="www.instagram.com" style="color:#CFCBCB;">Contacto</a></li>
+			<li><a href="contacto.html" style="color:#CFCBCB;">Contacto</a></li>
 		</ul>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
