--- a/contacto.html
+++ b/contacto.html
@@ -21,9 +21,8 @@
 <div class="contacto">
 <h3>Horarios de atencion: </h3>
 <br>
-<h3>De lunes a viernes de 10 a 18 hs</h3>
+<h3>de lunes a viernes de 10 a 18 hs</h3>
 <h3>Sabados de 10 a 13 hs</h3>
-<br>
 <h3>Telefono: (0381) 422-3636</h3>
 <br>
 </div>
