probando si subimos el footer con logo

--- a/index.html
+++ b/index.html
@@ -46,18 +46,16 @@
 												<!--<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
 											</li>
 					</ul>
-
 												<form class="form-inline my-2 my-lg-0">
 													<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
 													<button class="btn btn-outline-success gr-22 gr-sm-22" type="submit">Buscar</button>
 												</form>
 											</div>
 														<a href="carrito.html" class="volver"><i class="fas fa-2x fa-shopping-cart" style="color:#18EB8E ";></i></a>
-																</nav>
+			</nav>
 														<h1 id="Titulo">
 														  DRIVERS
 														</h1>
-
 			</header>
 			<main>
 	<!--===================ARTICULOS EN CARTAS==========================================-->
@@ -127,6 +125,7 @@
 			<li><a href="contacto.html" style="color:#CFCBCB;">Contacto</a></li>
 		</ul>
 		<div>
+			<i class="fab fa-facebook"></i>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
