--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 
 <footer>
 		<img src="/Applications/MAMP/htdocs/PROYECTOS/ecommerce/img/LOGO ACADEMIA.jpg" alt="" class="academia">
+	<img src="img/academia_anto.png" alt="" class="academia" style="width:30%";>
 	<style>a {text-decoration: none;} </style>
 		<ul class="sinvineta1">
 			<li><a href="index.html" style="color:#CFCBCB;">Home</a></li>
@@ -124,10 +125,8 @@
 			<li><a href="formulario.html" style="color:#CFCBCB;">Formulario de Registro</a></li>
 			<li><a href="contacto.html" style="color:#CFCBCB;">Contacto</a></li>
 		</ul>
-<<<<<<< HEAD
 		<div>
->>>>>>> master
-</footer>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
