--- a/preguntas.html
+++ b/preguntas.html
@@ -51,6 +51,8 @@ Es facil, debe ir al pie de la pagina e ingresar en Formulario de Registro.
 
 <footer>
 	<img src="/Applications/MAMP/htdocs/PROYECTOS/ecommerce/img/LOGO ACADEMIA.jpg" alt="" class="academia">
+	<img src="img/academia_anto.png" alt="" class="academia" style="width:30%";>
+
 	<style>a {text-decoration: none;} </style>
 		<ul class="sinvineta1">
 			<li><a href="index.html" style="color:#CFCBCB;">Home</a></li>
