--- a/putter.html
+++ b/putter.html
@@ -83,6 +83,8 @@
 
 <footer>
 	<img src="/Applications/MAMP/htdocs/PROYECTOS/ecommerce/img/LOGO ACADEMIA.jpg" alt="" class="academia">
+	<img src="img/academia_anto.png" alt="" class="academia" style="width:30%";>
+
 	<style>a {text-decoration: none;} </style>
 		<ul class="sinvineta1">
 			<li><a href="index.html" style="color:#CFCBCB;">Home</a></li>
