--- a/carrito.html
+++ b/carrito.html
@@ -4,32 +4,36 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0cb2d9cf91.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>CARRITO DE COMPRAS</title>
   </head>
   <body>
       <header>
         <a href="index.html" class="volver"><img src="img/shopgolf.png" alt=""></a>
+        <a href="index.html" class="volver1"><i class="fas fa-2x fa-home" style="color:#18EB8E"></i></a>
       </header>
 
     <section>
-
       <div class="jumbotron">
-  <h1 class="display-4">Articulos Seleccionados</h1>
-  <ul class="list-group list-group-horizontal">
-        <li class="list-group-item">Articulo 1</li>
-        <li class="list-group-item">Articulo 2</li>
-        <li class="list-group-item">Articulo 3</li>
-  </ul>
-  <!--<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>-->
-  <div class="pago" container>
-  <hr class="my-4">
-  <p class="total">TOTAL $</p>
-  <a class="btn btn-success btn-lg" href="#" role="button">PAGAR</a>
-</div>
-</div>
-
-</div>
+          <h1 class="display-6">ARTICULOS SELECCIONADOS</h1>
+            <ul class="list-group list-group-horizontal">
+              <li class="list-group-item">Articulo 1</li>
+              <li class="list-group-item">Articulo 2</li>
+              <li class="list-group-item">Articulo 3</li>
+            </ul>
+        <div class="pago" container>
+          <hr class="my-4">
+            <p class="total">TOTAL $</p>
+              <a class="btn btn-success btn-lg" href="#" role="button">PAGAR</a>
+        </div>
+      </div>
+        <div class="tarjetas">
+          <img src="img/paypal.png" alt="">
+          <img src="img/americanexpress.png" alt="">
+          <img src="img/mastercard.png" alt="">
+          <img src="img/visa.png" alt="">
+        </div>
     </section>
 
     <footer>
