--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
 		<header class="golfshop">
 			<img src="img/shopgolf.png" alt="logotipo" class="logo">
 
-			<div class="container">
 		<!-- cabecera -->
+		<div class="redes">
+			<i class="fab fa-2x fa-facebook" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<i class="fab fa-2x fa-twitter" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<i class="fab fa-2x fa-instagram" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</div>
+		<div class="container">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 				<a class="navbar-brand" href="#">The Golf Shop</a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,11 +59,13 @@
 														<a href="carrito.html" class="volver"><i class="fas fa-2x fa-shopping-cart" style="color:#18EB8E ";></i></a>
 			</nav>
 														<h1 id="Titulo">
-														  DRIVERS
+														  D R I V E R S
 														</h1>
+														
 			</header>
 			<main>
 	<!--===================ARTICULOS EN CARTAS==========================================-->
+							<div class="container-card">
 							<div class="card-deck" style="width:70%">
 								<div class="card" style="width: 18rem;">
 									<img src="img/driverepic_resultado.jpg" class="card-img-top" alt="...">
@@ -85,6 +92,7 @@
 								</div>
 							</div>
 						</div>
+						<br>
 <!--===================ARTICULOS EN CARTAS==========================================-->
 						<div class="card-deck" style="width:70%">
 							<div class="card" style="width: 18rem;">
@@ -112,6 +120,7 @@
 								</div>
 							</div>
 						</div>
+					</div>
 				</main>
 
 <footer>
@@ -125,6 +134,8 @@
 			<li><a href="contacto.html" style="color:#CFCBCB;">Contacto</a></li>
 		</ul>
 		<div>
+			<p class="autor">© 2019 The Golf Shop|Diseño y Programación: TNS Designs</p>
+		</div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
