--- a/academia.html
+++ b/academia.html
@@ -27,14 +27,14 @@
 <div class="fotos" style="">
   <h3></h3>
   <br>
-<img src="img/acad1.jpg" class="img-fluid" alt="Responsive image">
-<img src="img/acad2.jpg" alt="..." class="img-thumbnail">
-<img src="img/acad3.jpg" alt="..." class="img-thumbnail">
-<img src="img/acad4.jpg" alt="..." class="img-thumbnail">
-<img src="img/acad5.jpg" alt="..." class="img-thumbnail">
-<img src="img/acad6.jpg" alt="..." class="img-thumbnail">
-<img src="img/acad7.jpg" alt="..." class="img-thumbnail">
-<img src="img/acad8.jpg" alt="..." class="img-thumbnail">
+<img src="img/acad1.jpg" class="img-fluid" alt="Responsive image"; >
+<img src="img/acad2.jpg" class="img-fluid" alt="Responsive image" ;>
+<img src="img/acad3.jpg" class="img-fluid" alt="Responsive image"; >
+<img src="img/acad4.jpg" class="img-fluid" alt="Responsive image" ;>
+<img src="img/acad5.jpg" class="img-fluid" alt="Responsive image";>
+<img src="img/acad6.jpg" class="img-fluid" alt="Responsive image";>
+<img src="img/acad7.jpg" class="img-fluid" alt="Responsive image";>
+<img src="img/acad8.jpg" class="img-fluid" alt="Responsive image";>
 <video src="https://www.facebook.com/304821913452701/posts/317836152151277/"></video>
 
 
@@ -53,7 +53,7 @@
 
 
 <footer>
-	<img src="/Applications/MAMP/htdocs/PROYECTOS/ecommerce/img/LOGO ACADEMIA.jpg" alt="" class="academia">
+	<img src="img/academia_anto.png" alt="" class="academia" style="width: 20%">
 	<style>a {text-decoration: none;} </style>
 		<ul class="sinvineta1">
 			<li><a href="Contacto.html" style="color:#CFCBCB;">Home</a></li>
