Cambio en hierros, mañana vemos el index

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<i class="fab fa-2x fa-twitter" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<i class="fab fa-2x fa-instagram" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		</div>
+
 		<div class="container">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 				<a class="navbar-brand" href="#">The Golf Shop</a>
@@ -57,18 +58,16 @@
 												</form>
 											</div>
 														<a href="carrito.html" class="volver"><i class="fas fa-2x fa-shopping-cart" style="color:#18EB8E ";></i></a>
-			</nav>
-														<h1 id="Titulo">
-														  D R I V E R S
-														</h1>
-														
+				</nav>
+														<h1 id="Titulo">D R I V E R S</h1>
+
 			</header>
 			<main>
 	<!--===================ARTICULOS EN CARTAS==========================================-->
-							<div class="container-card">
+			<div class="container-card">
 							<div class="card-deck" style="width:70%">
 								<div class="card" style="width: 18rem;">
-									<img src="img/driverepic_resultado.jpg" class="card-img-top" alt="...">
+								<img src="img/driverepic_resultado.jpg" class="card-img-top" alt="...">
 								<div class="card-body">
 									<h5 class="card-title">CALLAWAY EPIC</h5>
 									<p class="card-text">Modelo 2019</p>
@@ -120,8 +119,14 @@
 								</div>
 							</div>
 						</div>
-					</div>
+				</div>
 				</main>
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
 
 <footer>
 		<img src="img/academia_anto.png" alt="" class="academia" style="width: 20%">
@@ -137,10 +142,5 @@
 			<p class="autor">© 2019 The Golf Shop|Diseño y Programación: TNS Designs</p>
 		</div>
 </footer>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-
-</body>
 </html>
