--- a/hierros.html
+++ b/hierros.html
@@ -3,109 +3,99 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-				<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-				<link rel="stylesheet" href="css/style.css">
-
-		<title>The Golf Shop</title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="ecommerce\css\style.css">
+		<title>The Golf Shop-Hierros</title>
 	</head>
+
 	<body>
 		<header class="golfshop">
 			<a href="index.html" class="volver"><img src="img/shopgolf.png" alt=""></a>
 
-	<div class="container">
+			<div class="redes">
+				<i class="fab fa-2x fa-facebook" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<i class="fab fa-2x fa-twitter" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<i class="fab fa-2x fa-instagram" style="color:#18EB8E"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			</div>
 
+				<div class="container">
+					<form class="form-inline my-2 my-lg-0">
+						<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
+						<button class="btn btn-outline-success gr-22 gr-sm-22" type="submit">Buscar</button>
+					</form>
+				</div>
+			<h1 id="Titulo">HIERROS</h1>
+		</header>
 
+		<div class="container">
+			<div class="card-deck">
+				<div class="card">
+					 <img src="img/callaway_hierros_resultado.jpg" class="card-img-top" alt="...">
+					  <div class="card-body">
+					     <h5 class="card-title">HIERROS CALLAWAY</h5>
+					     <p class="card-text">Big Bertha y XR 2019</p>
+					     <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
+							<a href="#" class="btn btn-success">COMPRAR</a>
+						</div>
+			</div>
+				<div class="card">
+					<img src="img/hierrosepic_resultado.jpg" class="card-img-top" alt="...">
+					 <div class="card-body">
+					   <h5 class="card-title">CALLAWAY EPIC</h5>
+					    <p class="card-text">Los mas faciles</p>
+					     <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
+							<a href="#" class="btn btn-success">COMPRAR</a>
+						</div>
+				</div>
+					<div class="card">
+					  <img src="img/hierrosapex_resultado.jpg" class="card-img-top" alt="...">
+					   <div class="card-body">
+					     <h5 class="card-title">CALLAWAY APEX</h5>
+					      <p class="card-text">Para manejar la pelota</p>
+					      <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
+							<a href="#" class="btn btn-success">COMPRAR</a>
+						</div>
+					 </div>
+					</div>
+		</div>
 
+			<div class="container">
+						<div class="card-deck">
+					  <div class="card">
+					    <img src="img/hierrom5_resultado.jpg" class="card-img-top" alt="...">
+					    <div class="card-body">
+					      <h5 class="card-title">TAYLOR MADE M5</h5>
+					      <p class="card-text">Modelo 2019</p>
+					      <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
+							<a href="#" class="btn btn-success">COMPRAR</a>
+							</div>
+					  </div>
+					  <div class="card">
+					    <img src="img/hierrosm6_resultado.jpg" class="card-img-top" alt="...">
+					    <div class="card-body">
+					      <h5 class="card-title">TAYLOR MADE M6</h5>
+					      <p class="card-text">Los mas faciles de Taylor</p>
+					      <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
+							<a href="#" class="btn btn-success">COMPRAR</a>
+							</div>
+					  </div>
+					  <div class="card">
+					    <img src="img/hierrospingg_resultado.jpg" class="card-img-top" alt="...">
+					    <div class="card-body">
+								<h5 class="card-title">TAYLOR MADE M6</h5>
+								<p class="card-text">Los mas faciles de Taylor</p>
+					      <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
+							<a href="#" class="btn btn-success">COMPRAR</a>
+							</div>
+					  </div>
+					</div>
+			</div>
 
-
-		<!-- boton buscar -->
-
-
-	<form class="form-inline my-2 my-lg-0">
-		<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
-		<button class="btn btn-outline-success gr-22 gr-sm-22" type="submit">Buscar</button>
-	</form>
-</div>
-<h1 id="Titulo">
-  HIERROS
-</h1>
-	</header>
-
-
-
-<!--/==========================PRIMERA CARTA===============================-->
-<div class="card" style="width: 18rem;">
-  <img src="img/callaway_hierros.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">HIERROS CALLAWAY</h5>
-    <p class="card-text">Big Bertha y XR 2019</p>
-    <a href="#" class="btn btn-success">COMPRAR</a>
-  </div>
-</div>
-
-<!--/==========================PRIMERA CARTA===============================-->
-<div class="card" style="width: 18rem;">
-  <img src="img/hierrosepic.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">CALLAWAY EPIC</h5>
-    <p class="card-text">Los mas faciles</p>
-    <a href="#" class="btn btn-success">COMPRAR</a>
-  </div>
-</div>
-
-<!--/==========================PRIMERA CARTA===============================-->
-<div class="card" style="width: 18rem;">
-  <img src="img/hierrosapex.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">CALLAWAY APEX</h5>
-    <p class="card-text">Para manejar la pelota</p>
-    <a href="#" class="btn btn-success">COMPRAR</a>
-  </div>
-</div>
-
-<!--/==========================SEGUNDA CARTA===============================-->
-	<div class="card" style="width: 18rem;">
-	  <img src="img/hierrom5.jpg" class="card-img-top" alt="...">
-	  <div class="card-body">
-	    <h5 class="card-title">TAYLOR MADE M5</h5>
-	    <p class="card-text">Modelo 2019</p>
-	    <a href="#" class="btn btn-success">COMPRAR</a>
-	  </div>
-</div>
-<!--/==========================TERCERA CARTA===============================-->
-	<div class="card" style="width: 18rem;">
-	<img src="img/hierrosm6.jpg" class="card-img-top" alt="...">
-	<div class="card-body">
-		<h5 class="card-title">TAYLOR MADE M6</h5>
-		<p class="card-text">Los mas faciles de Taylor</p>
-		<a href="#" class="btn btn-success">COMPRAR</a>
-	</div>
-</div>
-<!--/==========================CUARTA CARTA===============================-->
-
-<div class="card" style="width: 18rem;">
-  <img src="img/hierrospingg.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Ping G</h5>
-    <p class="card-text">Vara de acero y grafito</p>
-    <a href="#" class="btn btn-success">COMPRAR</a>
-  </div>
-</div>
-
-
-<!--/==========================PRIMERA CARTA===============================-->
-<div class="card" style="width: 18rem;">
-  <img src="img/hierros ping.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Ping G400</h5>
-    <p class="card-text">Fitting incluido</p>
-    <a href="#" class="btn btn-success">COMPRAR</a>
-  </div>
-</div>
-
-
-
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
 
 <footer>
 	<img src="/Applications/MAMP/htdocs/PROYECTOS/ecommerce/img/LOGO ACADEMIA.jpg" alt="" class="academia">
@@ -120,8 +110,4 @@
 			<li><a href="contacto.html" style="color:#CFCBCB;">Contacto</a></li>
 		</ul>
 </footer>
-
-
-
-</body>
 </html>
