--- a/hierros.html
+++ b/hierros.html
@@ -23,15 +23,19 @@
 				</div>
 			</div>
 
-				<div class="containerbarra">
+				<div class="container">
+					<div class="barra">
 					<form class="form-inline my-2 my-lg-0">
 						<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
 						<button class="btn btn-outline-success gr-22 gr-sm-22" type="submit">Buscar</button>
 					</form>
 				</div>
-					<div class = "containertitulo">
-						<h1>H I E R R O S</h1>
-					</div>
+			</div>
+					<div class = "container">
+						<div class="titulo">
+							<h1>H I E R R O S</h1>
+						</div>
+				</div>
 		</header>
 
 		<div class="container">
@@ -104,8 +108,7 @@
 </body>
 
 <footer>
-	<img src="/Applications/MAMP/htdocs/PROYECTOS/ecommerce/img/LOGO ACADEMIA.jpg" alt="" class="academia">
-	<img src="img/academia_anto.png" alt="" class="academia" style="width:30%";>
+	<img src="img/academia_anto.png" alt="" class="academia"> <!--<style="width:10% height:10%">-->
 
 	<style>a {text-decoration: none;} </style>
 		<ul class="sinvineta1">
